# aoc2025

./: CMakeLists.txt  LICENCE  README.md  run_all.sh
aoc1/: aoc1.cpp
aoc10/: CMakeLists.txt  aoc10.cpp  aoc10_local.cpp  aoc10_search.cpp  aoc10_z3.cpp  simplex.cpp  simplex.h  simplex2.cpp  simplex3.cpp  simplex4.cpp
aoc11/: aoc11.cpp
aoc12/: aoc12.cpp
aoc2/: CMakeLists.txt  aoc2.cpp  aoc2_matt.cpp
aoc3/: aoc3.cpp
aoc4/: aoc4.cpp
aoc5/: CMakeLists.txt  aoc5.cpp
aoc6/: aoc6.cpp
aoc7/: aoc7_1.cpp
aoc8/: aoc8.cpp
aoc9/: aoc9.cpp
common/: graph.h
